hphp/hack/test/typecheck/closure_strict_def_typecheck.php.exp
File "closure_strict_def_typecheck.php", line 17, characters 28-29:
Could not find static method f1 (Typing[4090])
